# Project-Explorer

./: LICENSE  README.md  TODO.md  pyproject.toml
src/project_explorer/: __init__.py  __main__.py  viewer.py
src/project_explorer/assets/: __init__.py
src/project_explorer/data/: project.py  query-grammar.lark  query.py
src/project_explorer/io/: project.py  tools.py
src/project_explorer/model/: projects.py  signal.py
src/project_explorer/ui/: application.py  attribute.py  flow_layout.py  image_loader.py  line_edit_history.py  main_window.py  multi_image.py  preview.py  project_browser.py  project_card.py  project_data.py  project_navigation_bar.py  project_overview.py  project_tag_list.py  search_bar.py  sorted_flow_container.py  statistics.py  thumbnails.py
src/project_explorer/ui/extension/: event.py  quick_button.py  widget.py
src/project_explorer/ui/layout/: dynamic_grid_layout.py  flow_layout.py  linear_layout.py
src/project_explorer/utility/: typing.py
