[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project_explorer"
version = "0.0.1"
dependencies = [
    "pillow",
    'pydantic',
    "lark",
    "regex"
]

[tool.setuptools.package-data]
"project_explorer" = ["py.typed","assets/chevron_left.svg","assets/chevron_right.svg","assets/dummy.png","assets/open_in.svg","assets/terminal.svg"]

[project.gui-scripts]
project-explorer = "project_explorer:main"